--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@graphql-tools/schema": "^10.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "lodash.merge": "^4.6.2",
+    "next-auth": "^4.22.1",
+    "node-fetch": "^3.3.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
