--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/server": "^4.7.5",
     "@graphql-tools/schema": "^10.0.0",
+    "@prisma/client": "^5.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -31,6 +32,7 @@
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.4.2",
     "nodemon": "^3.0.1",
+    "prisma": "^5.0.0",
     "typescript": "^5.1.6"
   }
 }
