--- a/package.json
+++ b/package.json
@@ -21,16 +21,20 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.14.0",
     "lodash.merge": "^4.6.2",
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.4.2",
+    "@types/ws": "^8.5.5",
     "nodemon": "^3.0.1",
     "prisma": "^5.0.0",
     "typescript": "^5.1.6"
