--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "^5.0.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -31,6 +32,7 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.4.2",
