--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.14.0",
+    "jsonwebtoken": "^9.0.1",
     "lodash.merge": "^4.6.2",
     "next-auth": "^4.22.1",
     "node-fetch": "^3.3.1",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.4.2",
     "@types/ws": "^8.5.5",
